feat: 期間指定パラメータのバリデーション機能を追加し、統計取得メソッドを更新
